@startuml
skinparam backgroundColor #FFFFFF
skinparam classFontColor #2A2A2A
skinparam classFontSize 13
hide empty members

'#######################
'### ACTIVITIES ###
'#######################
class MainActivity {
  - boolean modfavorito
  - String nombre
  - DrawerLayout dr
  - ActionBarDrawerToggle tg
  + void logicaLista()
  + void onNombreActualizado(String)
  + void aplicarIdioma()
  + void restaurarTema()
}

class InfoStock {
  - EditText notasEditText
  - String NOM_ARCHIVO
  - Translator traductor
  + void gestionInfo()
  + void guardarNotas()
}

class Saludo {
  + void pedirPermisoNotificaciones()
  + void noti()
}

'#######################
'### FRAGMENTS ###
'#######################
class FragmentAntiguo {
  + void onViewCreated()
}

class FragmentNuevo {
  - EditText notasEditText
  - Translator traductor
  + void guardarNotas()
  + String leerNotas()
}

interface OnNombreActualizadoListener {
  + void onNombreActualizado(String)
}

'#######################
'### ADAPTERS ###
'#######################
class AdaptadorRv {
  - List<String> listaItems
  - Context context
  + MiViewHolder onCreateViewHolder()
  + void onBindViewHolder()
  + int getItemCount()
    - TextView textoItem
    - ImageButton favBot
    + MiViewHolder(View)
    + void onClick()
  }


'#######################
'### DATABASE ###
'#######################
class StockDB {
  - static final String DB = "stock.db"
  + void onCreate(SQLiteDatabase db)
  + void actualizar(SQLiteDatabase db, String nombre, Boolean favorito)
  + Cursor obtenerNombres()
  + boolean esFavorito(String nombre)
}

'#######################
'### RELACIONES ###
'#######################
MainActivity "1" --> "1..*" AdaptadorRv
MainActivity "1" --> "1..2" FragmentAntiguo
MainActivity "1" --> "1..2" FragmentNuevo
MainActivity ..|> OnNombreActualizadoListener

FragmentNuevo "1" --> "1" StockDB
FragmentNuevo ..|> OnNombreActualizadoListener

InfoStock "1" --> "1" StockDB
AdaptadorRv "1" *-- "1..*" AdaptadorRv.MiViewHolder
AdaptadorRv --> "1" StockDB

MainActivity --> InfoStock
Saludo --> MainActivity

'#######################
'### COMPONENTES ANDROID ###
'#######################
class MaterialAlertDialogBuilder {
  + setTitle()
  + setMessage()
  + show()
}

class Translator {
  + translate()
  + downloadModelIfNeeded()
}

'#######################
'### RELACIONES EXTERNAS ###
'#######################
AdaptadorRv.MiViewHolder --> MaterialAlertDialogBuilder
MainActivity --> MaterialAlertDialogBuilder
InfoStock --> MaterialAlertDialogBuilder
FragmentNuevo --> Translator
InfoStock --> Translator
@enduml